login issue fix for operator user and styling fix for email expand/collapse icon (#5930)

--- a/recon/app/styles/recon/base/event-detail/emails/_header.scss
+++ b/recon/app/styles/recon/base/event-detail/emails/_header.scss
@@ -1,6 +1,5 @@
 .recon-email-header {
   background-color: #424242;
-  margin-top: -8px;
 
   .recon-email-header-item {
     color: text-color(neutral);
